--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,31 +1,29 @@
-name: Java CI
+name: Java CI with Maven - Build
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
-    if: startsWith(github.event.head_commit.message, '[CI skip]') == false
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3.0.2
-      - name: Set up JDK 16
-        uses: actions/setup-java@v3.5.1
+      - name: Checkout Source
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
         with:
-          java-version: 16
-          distribution: temurin
+          java-version: '17'
+          distribution: 'zulu'
       - name: Build with Maven
-        run: mvn package --file pom.xml
-      - name: Get build artifact ready
-        run: mkdir staging && cp target && ls
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v3.1.0
+        run: mvn -B package --file pom.xml
+
+      - name: Upload a Build Target
+        uses: actions/upload-artifact@v2.3.1
         with:
-          name: Dev Build
-          path: staging
+          name: "Build"
+          path: ./
